# mojo-compute

./: .gitignore  ARCHITECTURE.md  DELIVERABLES_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_OLD.md  MOJO_MIGRATION.md  PROGRESS.md  PR_SUMMARY_ISSUE_2.md  QUICK_START.md  README.md  README_MOJO.md  README_NEW.md  STATUS.md  compile_mojo.sh  gpu_batch_py  gpu_batch_py_v25  pyproject.toml  pytest.ini  server.py  test_client.py  test_complete_workflow.py
.github/workflows/: test.yml
benchmarks/: README.md  SIMD_OPTIMIZATION.md  comparison_report.md  comprehensive_benchmark.py  python_baseline.py  run_benchmark.sh  sma_benchmark.py
deploy/: DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  healthcheck.py  install.sh  mojo-compute.service
docs/: API_DESIGN.md  DEVELOPMENT.md
mojo_compute/: gpu_indicators.py
mojo_compute/api/: schemas.py  server.py
mojo_compute/backtesting/: __init__.py  engine.py  mojo_wrapper.py  strategy.py
mojo_compute/indicators/: gpu_batch_wrapper.py  indicators_cli.🔥  indicators_cli_compiled  indicators_ffi.mojo  indicators_ffi_compiled  indicators_ffi_shared.mojo  indicators_ffi_v2.mojo  indicators_ffi_v3.mojo  indicators_io.🔥  indicators_stdin.🔥  mojo_wrapper.py  mojo_wrapper_direct.py  mojo_wrapper_ffi.py  mojo_wrapper_subprocess.py  rsi_mojo.🔥  rsi_mojo_compiled  rsi_subprocess.🔥
mojo_compute/market_data/: bhavcopy_downloader.mojo  bhavcopy_scheduler.py
mojo_compute/ml/: __init__.py  bert_max.py  features.py  features_mojo_wrapper.py  indicators.mojo  predictions_scheduler.py  predictor.py  trainer.py
mojo_compute/sandbox/: __init__.py  baseline_tracker.py  config.py  mojo_wrappers.py  money_manager.py  server.py  session_manager.py  signal_consumer.py  trade_executor.py
monitoring/: README.md  prometheus_metrics.py  server_with_metrics.py
src/: gpu_batch_indicators.mojo  gpu_batch_indicators_python.mojo  gpu_indicators.mojo  hello.mojo  indicators.mojo  indicators_api.mojo  indicators_complete.mojo  indicators_simd.mojo
src/backtesting/: engine.mojo  (+4 more)
(+19 files in other folders)
