[project]
name = "trading-chitti-mojo-compute"
version = "0.1.0"
description = "High-performance compute service using Mojo for trading-chitti"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pandas-ta>=0.3.14b",
    "TA-Lib>=0.4.28",
    "memory-profiler>=0.61",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
