[project]
name = "trading-chitti-mojo-compute"
version = "0.1.0"
description = "High-performance compute service using Mojo for trading-chitti"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pandas-ta>=0.3.14b",
    "TA-Lib>=0.4.28",
    "memory-profiler>=0.61",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pixi.workspace]
channels = ["https://conda.modular.com/max", "conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
trading-chitti-mojo-compute = { path = ".", editable = true }

[tool.pixi.dependencies]
max = ">=25.5.0,<27"
mojo = "0.26.1"  # Stable version
numpy = ">=1.24,<2.3"
modular = ">=26.1.0,<27"  # Match Mojo version
pytorch = ">=2.10.0,<3"
scikit-learn = ">=1.8.0,<2"
xgboost = ">=3.1.3,<4"
lightgbm = ">=4.6.0,<5"
joblib = ">=1.5.3,<2"
psycopg2-binary = ">=2.9.10,<3"
